# vbtpro-templates

./: LICENSE  README.md  pyproject.toml
examples/: example_numba.py  example_optuna.py  example_talib.py  run_app.py
examples/csv/: NQ=F_ohlcv_data.csv
vectorbtpro_templates/: __init__.py  config.py  load_data.py  utils.py
vectorbtpro_templates/models/nb/: custom_indicators.py  pipelines.py  strategies.py
vectorbtpro_templates/models/optuna/: objectives.py
vectorbtpro_templates/models/talib/: custom_indicators.py  pipelines.py  strategies.py
